Bugfix: Use JSONPath instead of manual parsing

--- a/README.html
+++ b/README.html
@@ -192,6 +192,10 @@ Voorbeeld:</p>
 </ul>
 </li>
 </ul>
+<h3 id="20-december-2022">20 december 2022</h3>
+<ul>
+<li>Bug fix: selectief exporteren nu op basis van JSONPath specificatie.</li>
+</ul>
 
         
         <script async type="text/javascript">
